Record 489's bf16 rungs for Qwen3.5-0.8B and TinyLlama-1.1B
Both arms saturate at 16 threads; halving the bytes did not move the knee.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01EYZ5gxzjRmr6SW3WweyS8D